cleanup xarray notebooks 2

--- a/06_Intro_XArray2.ipynb
+++ b/06_Intro_XArray2.ipynb
@@ -68,6 +68,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the file from this address... \n",
+    "! wget http://ldeo.columbia.edu/~rpa/NOAA_NCDC_ERSST_v3b_SST.nc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ds = xr.open_dataset('NOAA_NCDC_ERSST_v3b_SST.nc')\n",
     "ds"
    ]
