cleanup xarray notebooks 3

--- a/06_Intro_XArray2.ipynb
+++ b/06_Intro_XArray2.ipynb
@@ -10,8 +10,8 @@
     "# XArray 101 🌍  \n",
     "-------\n",
     "* Jupyter and Python Basics\n",
-    "* Xarray Intro\n",
-    "* __Xarray Advanced__\n",
+    "* __Xarray Intro__\n",
+    "* Xarray Advanced\n",
     "* Vector Data\n",
     "* Remote Sensing\n",
     "* Visualization\n",
