Small fixes to nb 11

--- a/11_Viz_IPyleaflet2.ipynb
+++ b/11_Viz_IPyleaflet2.ipynb
@@ -12,19 +12,26 @@
     "* Jupyter and Python Basics\n",
     "* Xarray Intro\n",
     "* Xarray Advanced\n",
+    "* Data Catalog \n",
     "* Vector Data\n",
     "* Remote Sensing\n",
     "* __Visualization__\n",
     "\n",
     "-------  \n",
-    "**NOTE: This notebook is taken from the excellent examples that come with the ipyleaflet package:\n",
-    "https://ipyleaflet.readthedocs.io/en/latest/index.html. I added some minor extras...**\n",
     "</div>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE:** This notebook is taken from the excellent examples that come with the ipyleaflet package:\n",
+    "https://ipyleaflet.readthedocs.io/en/latest/index.html. I added some minor extras..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea16088513464918853a799a9aaa0883",
+       "model_id": "b382ae6feb1a467caa750d5abe38d2fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +453,7 @@
        "Attributes:\n",
        "    centerName:      US National Weather Service - NCEP(WMC)\n",
        "    disciplineName:  Meteorological products\n",
-       "    refTime:         2016-04-30T06:00:00.000Z</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-1a9ed0b3-694a-453a-bd05-1d125c34defa' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-1a9ed0b3-694a-453a-bd05-1d125c34defa' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 181</li><li><span class='xr-has-index'>lon</span>: 360</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-37aaae06-fcfc-457e-a7da-556102e90d82' class='xr-section-summary-in' type='checkbox'  checked><label for='section-37aaae06-fcfc-457e-a7da-556102e90d82' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>90.0 89.0 88.0 ... -89.0 -90.0</div><input id='attrs-f3814c9c-b660-415a-9143-2264f4191106' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f3814c9c-b660-415a-9143-2264f4191106' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f02a3fce-90ec-4a1c-ba20-53b008c1ab79' class='xr-var-data-in' type='checkbox'><label for='data-f02a3fce-90ec-4a1c-ba20-53b008c1ab79' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 90.,  89.,  88.,  87.,  86.,  85.,  84.,  83.,  82.,  81.,  80.,  79.,\n",
+       "    refTime:         2016-04-30T06:00:00.000Z</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-66410cba-8dee-490f-ac15-ab7764b3136a' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-66410cba-8dee-490f-ac15-ab7764b3136a' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 181</li><li><span class='xr-has-index'>lon</span>: 360</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-81c1b775-7e80-400c-b71d-5c95202c0275' class='xr-section-summary-in' type='checkbox'  checked><label for='section-81c1b775-7e80-400c-b71d-5c95202c0275' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>90.0 89.0 88.0 ... -89.0 -90.0</div><input id='attrs-db01ae65-5201-4db2-8d41-04a100f41635' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-db01ae65-5201-4db2-8d41-04a100f41635' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a9834408-a4bb-4a7e-894e-fcaeba963112' class='xr-var-data-in' type='checkbox'><label for='data-a9834408-a4bb-4a7e-894e-fcaeba963112' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 90.,  89.,  88.,  87.,  86.,  85.,  84.,  83.,  82.,  81.,  80.,  79.,\n",
        "        78.,  77.,  76.,  75.,  74.,  73.,  72.,  71.,  70.,  69.,  68.,  67.,\n",
        "        66.,  65.,  64.,  63.,  62.,  61.,  60.,  59.,  58.,  57.,  56.,  55.,\n",
        "        54.,  53.,  52.,  51.,  50.,  49.,  48.,  47.,  46.,  45.,  44.,  43.,\n",
@@ -461,19 +468,19 @@
        "       -54., -55., -56., -57., -58., -59., -60., -61., -62., -63., -64., -65.,\n",
        "       -66., -67., -68., -69., -70., -71., -72., -73., -74., -75., -76., -77.,\n",
        "       -78., -79., -80., -81., -82., -83., -84., -85., -86., -87., -88., -89.,\n",
-       "       -90.])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lon</span></div><div class='xr-var-dims'>(lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 1.0 2.0 ... 357.0 358.0 359.0</div><input id='attrs-2196e3bb-cc46-4844-be38-c537b8ca8952' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-2196e3bb-cc46-4844-be38-c537b8ca8952' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-439daad6-77c5-450e-a3f8-838196efd10b' class='xr-var-data-in' type='checkbox'><label for='data-439daad6-77c5-450e-a3f8-838196efd10b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([  0.,   1.,   2., ..., 357., 358., 359.])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-32bffafe-4363-4feb-839a-437108229d70' class='xr-section-summary-in' type='checkbox'  checked><label for='section-32bffafe-4363-4feb-839a-437108229d70' class='xr-section-summary' >Data variables: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>u_wind</span></div><div class='xr-var-dims'>(lat, lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-7984f5a6-cf7c-4378-b9fa-4d1a6f5fabf9' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7984f5a6-cf7c-4378-b9fa-4d1a6f5fabf9' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-fb38a2a8-c5cf-459a-9448-7c63d731a7ac' class='xr-var-data-in' type='checkbox'><label for='data-fb38a2a8-c5cf-459a-9448-7c63d731a7ac' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[ 4.54,  4.52,  4.49, ...,  4.61,  4.59,  4.57],\n",
+       "       -90.])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lon</span></div><div class='xr-var-dims'>(lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 1.0 2.0 ... 357.0 358.0 359.0</div><input id='attrs-b9c29a78-c22d-483b-8e53-113a45212964' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b9c29a78-c22d-483b-8e53-113a45212964' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6e29577b-ff17-4af5-9555-0c84f2cba085' class='xr-var-data-in' type='checkbox'><label for='data-6e29577b-ff17-4af5-9555-0c84f2cba085' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([  0.,   1.,   2., ..., 357., 358., 359.])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ad0bf9e3-f1c2-497e-b676-b2663a86f721' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ad0bf9e3-f1c2-497e-b676-b2663a86f721' class='xr-section-summary' >Data variables: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>u_wind</span></div><div class='xr-var-dims'>(lat, lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-86934d35-0470-4eef-99b6-b0eb4e62566b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-86934d35-0470-4eef-99b6-b0eb4e62566b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-23d5af6f-cd5c-453f-a880-a09b68f6754d' class='xr-var-data-in' type='checkbox'><label for='data-23d5af6f-cd5c-453f-a880-a09b68f6754d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[ 4.54,  4.52,  4.49, ...,  4.61,  4.59,  4.57],\n",
        "       [ 3.51,  3.5 ,  3.5 , ...,  3.5 ,  3.5 ,  3.5 ],\n",
        "       [ 1.62,  1.67,  1.73, ...,  1.45,  1.51,  1.56],\n",
        "       ...,\n",
        "       [-3.22, -3.1 , -2.99, ..., -3.58, -3.46, -3.34],\n",
        "       [-4.53, -4.46, -4.4 , ..., -4.69, -4.64, -4.58],\n",
-       "       [-2.75, -2.69, -2.63, ..., -2.92, -2.86, -2.8 ]])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>v_wind</span></div><div class='xr-var-dims'>(lat, lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-1b2eb133-871d-47de-9630-2f16bffad4c0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1b2eb133-871d-47de-9630-2f16bffad4c0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-02a53e26-507f-4cbe-8df9-6cf9cb29d94e' class='xr-var-data-in' type='checkbox'><label for='data-02a53e26-507f-4cbe-8df9-6cf9cb29d94e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[-1.36, -1.44, -1.52, ..., -1.13, -1.21, -1.29],\n",
+       "       [-2.75, -2.69, -2.63, ..., -2.92, -2.86, -2.8 ]])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>v_wind</span></div><div class='xr-var-dims'>(lat, lon)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-71f8280c-aefe-4489-91b1-26e6cf3111a4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-71f8280c-aefe-4489-91b1-26e6cf3111a4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-85e23cd5-4c7c-43be-977e-7e32c84383c5' class='xr-var-data-in' type='checkbox'><label for='data-85e23cd5-4c7c-43be-977e-7e32c84383c5' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[-1.36, -1.44, -1.52, ..., -1.13, -1.21, -1.29],\n",
        "       [-1.16, -1.2 , -1.25, ..., -1.02, -1.06, -1.11],\n",
        "       [-0.91, -0.93, -0.96, ..., -0.84, -0.86, -0.88],\n",
        "       ...,\n",
        "       [-4.75, -4.8 , -4.85, ..., -4.57, -4.63, -4.69],\n",
        "       [-3.92, -4.03, -4.15, ..., -3.58, -3.7 , -3.81],\n",
-       "       [-3.32, -3.37, -3.41, ..., -3.17, -3.22, -3.27]])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-889214fa-2292-464c-ba13-c1fe4b4042b2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-889214fa-2292-464c-ba13-c1fe4b4042b2' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>centerName :</span></dt><dd>US National Weather Service - NCEP(WMC)</dd><dt><span>disciplineName :</span></dt><dd>Meteorological products</dd><dt><span>refTime :</span></dt><dd>2016-04-30T06:00:00.000Z</dd></dl></div></li></ul></div></div>"
+       "       [-3.32, -3.37, -3.41, ..., -3.17, -3.22, -3.27]])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-91f9ed80-face-49f4-a6c9-fe9d28d05fcb' class='xr-section-summary-in' type='checkbox'  checked><label for='section-91f9ed80-face-49f4-a6c9-fe9d28d05fcb' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>centerName :</span></dt><dd>US National Weather Service - NCEP(WMC)</dd><dt><span>disciplineName :</span></dt><dd>Meteorological products</dd><dt><span>refTime :</span></dt><dd>2016-04-30T06:00:00.000Z</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.Dataset>\n",
@@ -490,7 +497,7 @@
        "    refTime:         2016-04-30T06:00:00.000Z"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
