add brunnenkopf data exercise

--- a/99_Excercise.ipynb
+++ b/99_Excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "included-eagle",
+   "id": "documentary-commander",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">  \n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agricultural-caution",
+   "id": "provincial-camel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "korean-secretary",
+   "id": "returning-dining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,27 +48,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collectible-reverse",
+   "id": "straight-institution",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import intake\n",
+    "\n",
+    "import cartopy.crs as ccrs\n",
+    "import geopandas as gpd\n",
+    "import holoviews as hv\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from pathlib import Path\n",
-    "import geopandas as gpd\n",
-    "import cartopy.crs as ccrs\n",
-    "import xarray as xr\n",
     "import rioxarray\n",
+    "from pathlib import Path\n",
     "\n",
     "import hvplot.pandas\n",
-    "import hvplot.xarray\n",
-    "\n",
-    "import intake\n"
+    "import hvplot.xarray"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "specified-monte",
+   "id": "egyptian-learning",
    "metadata": {},
    "source": [
     "# Optional: Build a data catalog\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "passing-basement",
+   "id": "fixed-level",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "palestinian-harrison",
+   "id": "official-programmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statistical-advantage",
+   "id": "adult-quick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "encouraging-market",
+   "id": "continued-picture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "featured-colony",
+   "id": "pressing-difference",
    "metadata": {},
    "source": [
     "## Attempt two: use parameters to differentiate between assets"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "later-figure",
+   "id": "binding-japan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "super-plasma",
+   "id": "meaning-provider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fancy-cooler",
+   "id": "coated-athletics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "canadian-starter",
+   "id": "widespread-legislature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-bridge",
+   "id": "working-emerald",
    "metadata": {},
    "source": [
     "# Inspect the data\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finished-version",
+   "id": "vertical-agent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "announced-median",
+   "id": "located-immune",
    "metadata": {},
    "source": [
     "## Multi-spectral raster data"
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finnish-senate",
+   "id": "mexican-intro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "natural-start",
+   "id": "saving-knight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "demonstrated-textbook",
+   "id": "extra-resolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brave-title",
+   "id": "color-choir",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dense-peoples",
+   "id": "theoretical-watershed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legal-klein",
+   "id": "narrative-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respective-robertson",
+   "id": "contrary-depression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "serious-peter",
+   "id": "amber-avatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fewer-supervision",
+   "id": "visible-laundry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sharing-heater",
+   "id": "proof-think",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extraordinary-proof",
+   "id": "bottom-argument",
    "metadata": {},
    "source": [
     "### Calculate stats"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-museum",
+   "id": "excellent-campaign",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +426,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "studied-alberta",
+   "id": "unsigned-silicon",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "working-swift",
+   "id": "possible-angel",
    "metadata": {},
    "source": [
     "# RGB Images"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specific-timber",
+   "id": "minus-butter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bright-sleep",
+   "id": "modified-procedure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-finance",
+   "id": "static-pathology",
    "metadata": {},
    "source": [
     "The data is huge, let's select a subset and check this out first"
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mobile-color",
+   "id": "civil-hundred",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "purple-whole",
+   "id": "oriented-revision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minimal-scroll",
+   "id": "diverse-subscriber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inner-connectivity",
+   "id": "initial-plate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,17 +520,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offshore-title",
+   "id": "specified-reproduction",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import holoviews as hv"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tracked-panel",
+   "id": "hidden-optics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offshore-auction",
+   "id": "floppy-mileage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "american-entertainment",
+   "id": "exposed-hours",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-camping",
+   "id": "transparent-breed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -583,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-consciousness",
+   "id": "automatic-voice",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -591,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "communist-stretch",
+   "id": "magnetic-better",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -599,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-dependence",
+   "id": "great-antigua",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sunset-triumph",
+   "id": "solar-mozambique",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -615,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dirty-kelly",
+   "id": "chinese-million",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -623,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "injured-review",
+   "id": "unavailable-ceramic",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -631,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "placed-natural",
+   "id": "major-harris",
    "metadata": {},
    "outputs": [],
    "source": []
