improve brunnenkopf data exercise

--- a/99_Excercise.ipynb
+++ b/99_Excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "documentary-commander",
+   "id": "sought-invention",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">  \n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "provincial-camel",
+   "id": "parental-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "returning-dining",
+   "id": "arabic-antenna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "straight-institution",
+   "id": "juvenile-finder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +57,18 @@
     "import cartopy.crs as ccrs\n",
     "import geopandas as gpd\n",
     "import holoviews as hv\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import rioxarray\n",
     "from pathlib import Path\n",
-    "\n",
     "import hvplot.pandas\n",
     "import hvplot.xarray"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "egyptian-learning",
+   "id": "seventh-earthquake",
    "metadata": {},
    "source": [
     "# Optional: Build a data catalog\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fixed-level",
+   "id": "academic-pharmaceutical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-programmer",
+   "id": "novel-boring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adult-quick",
+   "id": "known-hamilton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continued-picture",
+   "id": "handy-replication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressing-difference",
+   "id": "offensive-hearing",
    "metadata": {},
    "source": [
     "## Attempt two: use parameters to differentiate between assets"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-japan",
+   "id": "imposed-estonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "meaning-provider",
+   "id": "alike-workstation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coated-athletics",
+   "id": "minute-excitement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "widespread-legislature",
+   "id": "fourth-sperm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-emerald",
+   "id": "golden-crawford",
    "metadata": {},
    "source": [
     "# Inspect the data\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vertical-agent",
+   "id": "innocent-sierra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "located-immune",
+   "id": "usual-alcohol",
    "metadata": {},
    "source": [
     "## Multi-spectral raster data"
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mexican-intro",
+   "id": "therapeutic-northwest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saving-knight",
+   "id": "comparable-belle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extra-resolution",
+   "id": "burning-czech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "color-choir",
+   "id": "protective-tsunami",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "theoretical-watershed",
+   "id": "wireless-operations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrative-mediterranean",
+   "id": "dependent-scale",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contrary-depression",
+   "id": "victorian-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amber-avatar",
+   "id": "eastern-newcastle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "visible-laundry",
+   "id": "elementary-encoding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proof-think",
+   "id": "bridal-retro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-argument",
+   "id": "cutting-analyst",
    "metadata": {},
    "source": [
     "### Calculate stats"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excellent-campaign",
+   "id": "initial-survival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +426,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unsigned-silicon",
+   "id": "oriented-abortion",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "possible-angel",
+   "id": "aggressive-polyester",
    "metadata": {},
    "source": [
     "# RGB Images"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minus-butter",
+   "id": "hungarian-sunglasses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modified-procedure",
+   "id": "selected-marina",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-pathology",
+   "id": "smoking-valley",
    "metadata": {},
    "source": [
     "The data is huge, let's select a subset and check this out first"
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civil-hundred",
+   "id": "extra-parade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "oriented-revision",
+   "id": "english-coach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,40 +500,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "diverse-subscriber",
+   "id": "private-institute",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grazed_ref"
+    "grazed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial-plate",
+   "id": "fewer-cisco",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grazed_ref.shape"
+    "grazed.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specified-reproduction",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hidden-optics",
+   "id": "worst-marks",
    "metadata": {},
    "outputs": [],
    "source": [
     "regions = []\n",
-    "for index, row in grazed_ref.iterrows():\n",
+    "for index, row in grazed.iterrows():\n",
     "    b = rgb2018.rio.clip([row.geometry], drop=True)\n",
     "    regions.append( b.persist().to_dataset(name='z') )\n",
     "    \n",
@@ -543,93 +535,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "floppy-mileage",
+   "id": "copyrighted-savannah",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "exposed-hours",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regions = []\n",
-    "for _, region in grazed_ref.iterrows():   \n",
-    "    b = rgb2018.rio.clip([region.geometry], drop=False, invert=True)\n",
-    "    regions.append(b)\n",
-    "\n",
-    "print(regions)\n",
+    "regions2 = []\n",
+    "for index, row in nongrazed.iterrows():\n",
+    "    b = rgb2018.rio.clip([row.geometry], drop=True)\n",
+    "    regions2.append( b.persist().to_dataset(name='z') )\n",
     "    \n",
-    "fig, ax = plt.subplots(1, grazed_ref.shape[0], figsize=(3*grazed_ref.shape[0], 4))\n",
-    "\n",
-    "for i, p in enumerate(regions):\n",
-    "    regions[i].plot(ax=ax[i])"
+    "hv.Layout([r.hvplot.rgb(x='x', y='y', z='z', bands='band', aspect=1).opts(axiswise=True) for r in regions2]).cols(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transparent-breed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "automatic-voice",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "magnetic-better",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "great-antigua",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "solar-mozambique",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "chinese-million",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "unavailable-ceramic",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "major-harris",
+   "id": "dressed-underwear",
    "metadata": {},
    "outputs": [],
    "source": []
